--- a/index.html
+++ b/index.html
@@ -22,54 +22,69 @@
 
         <div class="gallery">
             <img src="fotos/risada2.JPG " alt="Foto 1" width="300">
-            <img src="fotos/risadaJPG.JPG" alt="Foto 2" width="300">
             <img src="fotos/image.png" alt="Foto 3" width="300">
+            <img src="fotos/risadaJPG.JPG" alt="Foto 2" width="300">
             <img src="fotos/piucopo.JPG" alt="Foto 4" width="300"> 
         </div>
     </div>
 
     <!-- Painel da carta -->
     <div id="carta">
-        <p id="direita">“Nos meus quase 20 anos de vida, nunca imaginei que uma única pessoa pudesse mudar tanto a forma como eu vejo o mundo. Desde que me aproximei de você, minha vida mudou completamente.  Não consigo nem imaginar viver como antes.“</p>
-        <p id="esquerda">"Toda vez que nos encontramos, eu me sinto alegre, ansioso e animado. Sinto que, com você, eu consigo ser uma pessoa cada vez mais dedicada. Sou muito feliz por ter me apaixonado e espero de verdade que possamos melhorar ainda mais a nossa relação."</p>
-        <p id="agradecimento"> Obrigado, Piu</p>
-        <p id="assinatura">Com amor, Arthur 💞</p>
-        <div id="rosa">
-            <div class="glass">
-                <div class="brilho"></div>
-            </div>
-            <div class="thorns">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div class="leaves">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+
+        <div class="carta-coluna esquerda">
+            <p id="esquerda">
+                “Nos meus quase 20 anos de vida, nunca imaginei que uma única pessoa pudesse mudar tanto a forma como eu vejo o mundo. Desde que me aproximei de você, minha vida mudou completamente. Não consigo nem imaginar viver como antes.“
+            </p>
+        </div>
+            
+        <div class="carta-centro">
+            <div id="rosa">
+                <div class="glass">
+                    <div class="brilho"></div>
                 </div>
-            <div class="petals">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="thorns">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="leaves">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    </div>
+                <div class="petals">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="deadPetals">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
-            <div class="deadPetals">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
+        </div>
+        <div class="carta-coluna direita">
+            <p id="direita">
+                "Toda vez que nos encontramos, eu me sinto alegre, ansioso e animado. Sinto que, com você, eu consigo ser uma pessoa cada vez mais dedicada. Sou muito feliz por ter me apaixonado e espero de verdade que possamos melhorar ainda mais a nossa relação."
+            </p>
+
+            <p id="agradecimento">Obrigado, Piu</p>
+            <p id="assinatura">Com amor, Arthur 💞</p>
         </div>
     </div>
 
 
+    <footer>
 
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
