--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="carta-coluna direita">
             <p id="direita">
-                "Toda vez que nos encontramos, eu me sinto alegre, ansioso e animado. Sinto que, com você, eu consigo ser uma pessoa cada vez mais dedicada. Sou muito feliz por ter me apaixonado e espero de verdade que possamos melhorar ainda mais a nossa relação."
+                "Toda vez que nos encontramos, eu me sinto alegre,mais leve, animado. Sinto que, com você,consigo ser uma pessoa cada vez mais dedicada. Sou muito feliz por ter me apaixonado e espero de verdade que possamos melhorar ainda mais a nossa relação."
             </p>
 
             <p id="agradecimento">Obrigado, Piu</p>
@@ -87,4 +87,5 @@
     </footer>
     <script src="app.js"></script>
 </body>
+
 </html>
